# Chess-Rendering-Group-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Models/: chess_scene.json  readMe
Models/Stone_Chess_Board/: Stone_Chess_Board_v1_L3.mtl
Models/Wooden_Chess_King_Side/: Wooden_Chess_King_Side_A_v1_l3.mtl
Models/Wooden_Chess_Pawn_Side/: Wooden_Chess_Pawn_Side_B_V2_L3.mtl
Models/board/: board.mtl
Models/king/: king.mtl
Models/pawn/: pawn.mtl
headerFiles/: bvh.hpp  camera.hpp  global.hpp  light.hpp  loadMesh.hpp  loadModel.hpp  mat.hpp  meshChecker.hpp  object.hpp  pathtracer.hpp  rasterizer.hpp  ray.hpp  renderer.hpp  scene.hpp  shader.hpp  texture.hpp
labCode/Danny'sLabCode/ HW3/: CMakeLists.txt  task1.cpp  task2.cpp  task2_test.cpp
labCode/Danny'sLabCode/ HW3/include/: half_edge.hpp  mesh.hpp  meshChecker.hpp
labCode/Danny'sLabCode/ HW3/src/: half_edge.cpp  mesh.cpp  meshChecker.cpp
labCode/Danny'sLabCode/HW1/: CMakeLists.txt  rasterizer.cpp  task2.cpp  task3.cpp
labCode/Danny'sLabCode/HW2/: OBJ_Loader.h  rasterizer.cpp  rasterizer.hpp  task1.cpp  task2.cpp  task3.cpp
labCode/Matt-CLab4/: Cylinder.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  main.cpp
labCode/Matt-CLab4/final_output_images/: binary_task2.ppm  binary_task3.ppm  binary_task4.ppm  binary_task5.ppm
src/: bvh.cpp  camera.cpp  loadModel.cpp  meshChecker.cpp  pathtracer.cpp  rasterizer.cpp  renderer.cpp  scene.cpp  shader.cpp
